--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ requests = "^2.31.0"
 bs4 = "^0.0.1"
 lxml = "^4.9.3"
 django-environ = "^0.11.2"
+phonenumbers = "^8.13.26"
+django-phonenumber-field = "^7.2.0"
 
 
 [build-system]
