--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ lxml = "^4.9.3"
 django-environ = "^0.11.2"
 phonenumbers = "^8.13.26"
 django-phonenumber-field = "^7.2.0"
+environ = "^1.0"
 
 
 [build-system]
