--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ django-environ = "^0.11.2"
 phonenumbers = "^8.13.26"
 django-phonenumber-field = "^7.2.0"
 environ = "^1.0"
+django-storages = "^1.14.2"
 
 
 [build-system]
