--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ phonenumbers = "^8.13.26"
 django-phonenumber-field = "^7.2.0"
 environ = "^1.0"
 django-storages = "^1.14.2"
+babel = "^2.14.0"
 
 
 [build-system]
