--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ environ = "^1.0"
 django-storages = "^1.14.2"
 dropbox = "^11.36.2"
 python-decouple = "^3.8"
+babel = "^2.14.0"
 
 
 [build-system]
