--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,7 @@ requests~=2.31.0
 bs4~=0.0.1
 lxml~=4.9.3
 django-environ~=0.11.2
+django-storages~=1.14.2
+babel~=2.14.0
+phonenumbers~=8.13.26
+django-phonenumber-field~=7.2.0
