--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ django-phonenumber-field = "^7.2.0"
 environ = "^1.0"
 django-storages = "^1.14.2"
 babel = "^2.14.0"
+pytz = "^2023.3.post1"
 
 
 [build-system]
